# sd-image-tool

./: .gitattributes  .gitignore  AGENTS.md  GEMINI.md  PACKAGING_NOTES.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: CI_RELEASE_AUTOMATION.md  KNOWN_BEHAVIOR_NOTES.md  RELEASE_CHECKLIST.md  TEST_MACHINE_SETUP.md  WSL_SETUP_TROUBLESHOOTING.md
packaging/windows/: file_version_info.txt  sd-image-tool.manifest  sd-image-tool.spec
scripts/: bootstrap.ps1  build_windows_release.ps1  check_wsl_pishrink.ps1  run_app.ps1  run_tests.ps1  start_aider.ps1
src/sd_image_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sdtool/: app.py  backend.py  formatting.py  image_vault.py  models.py  windows_disks.py  windows_elevation.py  windows_raw.py  workflow.py  wsl_setup.py  wsl_shrink.py
src/sdtool/ui/: main_window.py
tests/: test_backend.py  test_formatting.py  test_windows_disks.py  test_windows_elevation.py  test_windows_raw.py  test_workflow.py  test_wsl_preflight.py  test_wsl_setup.py  test_wsl_shrink.py
